added the answers

--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -1,12 +1,208 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "607a832c-b04d-48ce-992a-127508f1a16f",
+   "cell_type": "raw",
+   "id": "baa029a5-692e-4222-804b-45353cca784d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Q1. Explain the key features of python that make it a popular choice for programming.\n",
+    "\n",
+    "\n",
+    "Ans: Python is beginner friendly and has a readable syntax. It has a \n",
+    "vast library that save developers precious time. It has a strong community and \n",
+    "an object-oriented approach for programming which saves time and makes programming easier.\n",
+    "\n",
+    "Q2. Describe the role of predefined keywords in Python and provide examples of how they are used in a program.\n",
+    "\n",
+    "Ans: Predefined keywords in Python are reserved for their specific function and cannot be used as identifiers.\n",
+    "These keywords define the code and are the building blocks of a program written in Python.\n",
+    "For example: the 'print' keyword outputs string on the screen, 'for','while' keywords are used for looping.\n",
+    "\n",
+    "Q3. Compare and contrast mutable and immutable objects in Python with examples.\n",
+    "\n",
+    "Ans: Mutable objects can be altered while immutable objects cannot be altered or\n",
+    "changed once declared. For example, a character in a string cannot be assigned to another\n",
+    "character, similarly an element of a set cannot be changed to another.In case of mutable objects like\n",
+    "a list, the elements can be changed after declaration.\n",
+    "\n",
+    "Q4. Discuss the different types of operators in Python and provide examples of how they are used.\n",
+    "\n",
+    "Ans: The following are the types of operators in Python and their usage:\n",
+    "\n",
+    "1. Arithmetic Operators:\n",
+    "The operators that perform basic mathematical operations.\n",
+    "For Example:\n",
+    "           + (Addition): 5 + 3 equals 8.\n",
+    "           - (Subtraction): 4 - 1 equals 3.\n",
+    "           * (Multiplication): 2 * 3 equals 6.\n",
+    "           / (Division): 4 / 2 equals 2.\n",
+    "           // (Floor Division): 10 // 3 equals 3.\n",
+    "           % (Modulo): 5 % 2 equals 1.\n",
+    "           ** (Power): 4 ** 2 equals 16.\n",
+    "           \n",
+    "2. Assignment Operators:\n",
+    "The operators that assign values to variables.\n",
+    "For Example:\n",
+    "           = (Assignment): y = 5 assigns 5 to y.\n",
+    "           += (Addition Assignment): a += 1 is same as a = a + 1.\n",
+    "           -= (Subtraction Assignment): a -= 3 is same as a = a - 3.\n",
+    "           *= (Multiplication Assignment): a *= 4 is same as a = a * 4.\n",
+    "           /= (Division Assignment): a /= 3 is same as a = a / 3.\n",
+    "           \n",
+    "3. Comparison Operators:\n",
+    "The operators that compare two values and return a boolean result (True or False).\n",
+    "Examples:\n",
+    "           == (Equal To): 3 == 5 returns False.\n",
+    "           != (Not Equal To): 3 != 5 returns True.\n",
+    "           > (Greater Than): 3 > 5 returns False.\n",
+    "           < (Less Than): 3 < 5 returns True.\n",
+    "           >= (Greater Than or Equal To): 3 >= 5 returns False.\n",
+    "           <= (Less Than or Equal To): 3 <= 5 returns True.\n",
+    "           \n",
+    "4. Logical Operators:\n",
+    "The operators that combine boolean values.\n",
+    "Examples:\n",
+    "and: True and False results in False.\n",
+    "or: True or False results in True.\n",
+    "not: not True results in False.\n",
+    "\n",
+    "5. Bitwise Operators:\n",
+    "The operators that perform bit-level operations.\n",
+    "Examples:\n",
+    "& (Bitwise AND): 5 & 3 returns 1.\n",
+    "| (Bitwise OR): 5 | 3 returns 7.\n",
+    "^ (Bitwise XOR): 5 ^ 3 returns 6.\n",
+    "~ (Bitwise NOT): ~ 10 returns -11.\n",
+    "<<(Left Shift): Adds zeros at the end of the binary equivalent of the number operated on.\n",
+    ">>(Right Shift): Removes binary numbers from the end of the binary equivalent of the \n",
+    "number operated on.\n",
+    "\n",
+    "6. Identity Operators:\n",
+    "\n",
+    "is and is not: These are used for identity comparison.\n",
+    "\n",
+    "7. Membership Operators:\n",
+    "\n",
+    "in and not in: These are used to check if a value exists in objects like list or string.\n",
+    "\n",
+    "Q5. Explain the concept of type casting in Python with examples.\n",
+    "\n",
+    "Ans: There are two types of casts namely , implicit and explicit. Implicit cast \n",
+    "is done by Python itself when a float and an int type data is added wherein int is\n",
+    "promoted to float. Explicit cast on the other hand is performed by the programmer, \n",
+    "when one converts a numerical string, for example '10000' to an int type using int('10000') command.\n",
+    "\n",
+    "\n",
+    "Q6 How do conditional statements work in Python? Illustrate with examples.\n",
+    "\n",
+    "Ans: Conditional statements in Python are used to execute different code blocks based on certain conditions. \n",
+    "The most common conditional statements in Python are if, elif (abbreviation for \"else if\"), and else.\n",
+    "\n",
+    "1. if statement: \n",
+    "\n",
+    "if condition:\n",
+    "    # code block to be executed if the condition is True\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "isAlive = true\n",
+    "\n",
+    "if isAlive:\n",
+    "    print('can eat')\n",
+    "    print('can write code')\n",
+    "    print('can sleep')\n",
+    "\n",
+    "In the above code, as isAlive is true the code block is executed and the text is \n",
+    "printed on the screen.\n",
+    "\n",
+    "2. if-else statement:\n",
+    "\n",
+    "if condition:\n",
+    "    # code block to be executed if the condition is True\n",
+    "else:\n",
+    "    # code block to be executed if the condition is False\n",
+    "\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "Score = 89\n",
+    "\n",
+    "if Score > 90:\n",
+    "    print('Excellent Score :)')\n",
+    "    \n",
+    "else:\n",
+    "    print('Better luck next time :(')\n",
+    "\n",
+    "In the above code, as Score is less than 90 the else block is executed and the corresponding\n",
+    "text is printed.\n",
+    "\n",
+    "3. if-elif-else statement:\n",
+    "\n",
+    "if condition1:\n",
+    "    # code block to be executed if condition1 is True\n",
+    "elif condition2:\n",
+    "    # code block to be executed if condition2 is True\n",
+    "else:\n",
+    "    # code block to be executed if all conditions are False\n",
+    "\n",
+    "\n",
+    "x = 0\n",
+    "if x > 0:\n",
+    "    print(\"x is positive\")\n",
+    "elif x < 0:\n",
+    "    print(\"x is negative\")\n",
+    "else:\n",
+    "    print(\"x is zero\")\n",
+    "\n",
+    "In the above code, as x is 0 the else block is executed and the corresponding\n",
+    "text is printed.\n",
+    "\n",
+    "\n",
+    "Q7. Describe the different types of loops in Python and their use cases with examples.\n",
+    "\n",
+    "Ans: In Python, there are several types of loops that are commonly used to iterate over sequences or execute a block of code repeatedly. \n",
+    "The main types of loops in Python are for loop, while loop, and nested loops.\n",
+    "\n",
+    "1. for loop:\n",
+    "\n",
+    "The for loop is used to iterate over a sequence such as a list, tuple, string, or range.\n",
+    "\n",
+    "colors = [\"red\", \"green\", \"blue\"]\n",
+    "for color in colors:\n",
+    "    print(color)\n",
+    "\n",
+    "2. while loop:\n",
+    "The while loop is used to execute a block of code as long as a specific condition is true.\n",
+    "\n",
+    "count = 10\n",
+    "while count > 0:\n",
+    "    print(count)\n",
+    "    count -= 1\n",
+    "\n",
+    "Prints 10,9,8,7,6....1 on the screen on discrete lines.\n",
+    "\n",
+    "3.Nested loops:\n",
+    "\n",
+    "Nested loops are loops within loops. \n",
+    "They are used to iterate over multiple sequences or to perform repeated operations.\n",
+    "\n",
+    "For example: \n",
+    "Printing a square on the screen:\n",
+    "\n",
+    "for i in range(4):\n",
+    "    for j in range(4):\n",
+    "        print('*')\n",
+    "    print( )\n",
+    "\n",
+    "In this case, it is a 3 x 3 square.\n",
+    "\n",
+    "4. Break and continue statements: \n",
+    "\n",
+    "1. break keyword is used to break out of a loop.\n",
+    "2. continue keyword is used to skip the current iteration and start from \n",
+    "   the beginning of the loop.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
