--- a/Functions_Assignment.ipynb
+++ b/Functions_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBDrXW80DJaH3+GkeXO8oW",
+      "authorship_tag": "ABX9TyOxkx2c3o3TyJ7hui4MMgfw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -219,9 +219,54 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def fibnac_series(n):\n",
+        "    a = 0\n",
+        "    b = 1\n",
+        "    for i in range(n): # if n = 5 , 0 , 1, 2, 3, 4\n",
+        "        yield a\n",
+        "        a , b = b , a + b\n",
+        "\n",
+        "num = int((input(\"Enter number: \")))\n",
+        "fs = fibnac_series(num)\n",
+        "\n",
+        "for i in range(num):\n",
+        "  print(next(fs))\n",
+        "  i += 1\n"
+      ],
+      "metadata": {
+        "id": "R5NiN3Ic4Oq6",
+        "outputId": "40418742-edb1-4594-ae12-9b86a350cd5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number: 10\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "IyKAkH652lGs"
+        "id": "dV_1cVPn6Tpi"
       },
       "execution_count": null,
       "outputs": []
