--- a/Functions_Assignment.ipynb
+++ b/Functions_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxkx2c3o3TyJ7hui4MMgfw",
+      "authorship_tag": "ABX9TyMdqHEK8MBE1xJO0zClPqps",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,11 +235,11 @@
         "  i += 1\n"
       ],
       "metadata": {
-        "id": "R5NiN3Ic4Oq6",
-        "outputId": "40418742-edb1-4594-ae12-9b86a350cd5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R5NiN3Ic4Oq6",
+        "outputId": "40418742-edb1-4594-ae12-9b86a350cd5c"
       },
       "execution_count": 69,
       "outputs": [
@@ -264,9 +264,178 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 6. Write a generator function in Python that yields the powers of 2 up to a given exponent."
+      ],
       "metadata": {
         "id": "dV_1cVPn6Tpi"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def powers_of_2(expon):\n",
+        "    for i in range(expon + 1):\n",
+        "        yield 2 ** i\n",
+        "\n",
+        "num = int(input(\"Enter number: \"))\n",
+        "print(list(powers_of_2(num)))\n"
+      ],
+      "metadata": {
+        "id": "O6iAO6ks8rLT",
+        "outputId": "3f76816a-8296-4abb-fc82-5e6a11a6a8b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number: 10\n",
+            "[1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 7. Implement a generator function that reads a file line by line and yields each line as a string."
+      ],
+      "metadata": {
+        "id": "pKkrLYyc9UU7"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1XCldtOC94O0"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#8. Use a lambda function in Python to sort a list of tuples based on the second element of each tuple."
+      ],
+      "metadata": {
+        "id": "OPtyO7o--GOm"
+      },
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "list_of_tupl = [(1, 5), (3, 2), (2, 8), (4, 1)]\n",
+        "list_of_tupl.sort(key=lambda x: x[1])\n",
+        "print(list_of_tupl)\n"
+      ],
+      "metadata": {
+        "id": "qZOZs9gE-Hx6",
+        "outputId": "48b340cc-da03-4daa-a73a-d3d675c9d8ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[(4, 1), (3, 2), (1, 5), (2, 8)]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 9. Write a Python program that uses `map()` to convert a list of temperatures from Celsius to Fahrenheit."
+      ],
+      "metadata": {
+        "id": "mv4qWHbI-rKg"
+      },
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Celsius_list = [100,30,35,60,70,25,22,18]\n",
+        "list(map(lambda x: (x * (9/5)) + 32,Celsius_list))"
+      ],
+      "metadata": {
+        "id": "waE1HAOE-5nI",
+        "outputId": "d9937867-48c9-4e1c-d52f-1e3b595bfe55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[212.0, 86.0, 95.0, 140.0, 158.0, 77.0, 71.6, 64.4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 10. Create a Python program that uses `filter()` to remove all the vowels from a given string."
+      ],
+      "metadata": {
+        "id": "J-MSMj8v_bnA"
+      },
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "EnteredString = str(input(\"Enter string: \"))\n"
+      ],
+      "metadata": {
+        "id": "c7jIP6WpAWCt",
+        "outputId": "b7c086ac-36dd-487e-8ccf-c4d9b5a9efdc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter string: ho\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QQMOrLVpAn5e"
       },
       "execution_count": null,
       "outputs": []
