--- a/Functions_Assignment.ipynb
+++ b/Functions_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdqHEK8MBE1xJO0zClPqps",
+      "authorship_tag": "ABX9TyNXcOlvU0b2nPSzsZQm3boC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -284,11 +284,11 @@
         "print(list(powers_of_2(num)))\n"
       ],
       "metadata": {
-        "id": "O6iAO6ks8rLT",
-        "outputId": "3f76816a-8296-4abb-fc82-5e6a11a6a8b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "O6iAO6ks8rLT",
+        "outputId": "3f76816a-8296-4abb-fc82-5e6a11a6a8b2"
       },
       "execution_count": 76,
       "outputs": [
@@ -310,16 +310,26 @@
       "metadata": {
         "id": "pKkrLYyc9UU7"
       },
-      "execution_count": 77,
+      "execution_count": 98,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def read_file_line_by_line(filename):\n",
+        "  with open(filename, 'r') as f:\n",
+        "    for line in f:\n",
+        "      yield line.strip()\n",
+        "\n",
+        "read_file_line_by_line(\"test.txt\")\n",
+        "\n",
+        "for line in read_file_line_by_line(\"test.txt\"):\n",
+        "  print(line)"
+      ],
       "metadata": {
-        "id": "1XCldtOC94O0"
+        "id": "B-U-d142Fjzq"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -342,11 +352,11 @@
         "print(list_of_tupl)\n"
       ],
       "metadata": {
-        "id": "qZOZs9gE-Hx6",
-        "outputId": "48b340cc-da03-4daa-a73a-d3d675c9d8ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qZOZs9gE-Hx6",
+        "outputId": "48b340cc-da03-4daa-a73a-d3d675c9d8ca"
       },
       "execution_count": 79,
       "outputs": [
@@ -377,11 +387,11 @@
         "list(map(lambda x: (x * (9/5)) + 32,Celsius_list))"
       ],
       "metadata": {
-        "id": "waE1HAOE-5nI",
-        "outputId": "d9937867-48c9-4e1c-d52f-1e3b595bfe55",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "waE1HAOE-5nI",
+        "outputId": "d9937867-48c9-4e1c-d52f-1e3b595bfe55"
       },
       "execution_count": 83,
       "outputs": [
@@ -405,28 +415,35 @@
       "metadata": {
         "id": "J-MSMj8v_bnA"
       },
-      "execution_count": 84,
+      "execution_count": 93,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "EnteredString = str(input(\"Enter string: \"))\n"
+        "def remove_vowels(string):\n",
+        "  vowels = ['a','e','i','o','u','A','E','I','O','U']\n",
+        "  result = ''.join(filter(lambda char: char not in vowels, string))\n",
+        "  return result\n",
+        "\n",
+        "my_string = \"It was perfect, PERFECT! Everything, down to the last minute detail!\"\n",
+        "no_vowels_string = remove_vowels(my_string)\n",
+        "print(no_vowels_string)"
       ],
       "metadata": {
-        "id": "c7jIP6WpAWCt",
-        "outputId": "b7c086ac-36dd-487e-8ccf-c4d9b5a9efdc",
+        "id": "TxXfzr4pCvpl",
+        "outputId": "a26d2868-05a3-4b79-da43-52826c3b3ccb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 85,
+      "execution_count": 95,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Enter string: ho\n"
+            "t ws prfct, PRFCT! vrythng, dwn t th lst mnt dtl!\n"
           ]
         }
       ]
@@ -435,7 +452,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "QQMOrLVpAn5e"
+        "id": "FKVYUbhaE9HN"
       },
       "execution_count": null,
       "outputs": []
