--- a/Functions_Assignment.ipynb
+++ b/Functions_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXcOlvU0b2nPSzsZQm3boC",
+      "authorship_tag": "ABX9TyO5tEhkvNt0OLSD4F1E59gV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,11 +431,11 @@
         "print(no_vowels_string)"
       ],
       "metadata": {
-        "id": "TxXfzr4pCvpl",
-        "outputId": "a26d2868-05a3-4b79-da43-52826c3b3ccb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TxXfzr4pCvpl",
+        "outputId": "a26d2868-05a3-4b79-da43-52826c3b3ccb"
       },
       "execution_count": 95,
       "outputs": [
@@ -450,9 +450,69 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 11. Write a Python program, which returns a list with 2-tuples. Each tuple consists of the order number and the\n",
+        "# product of the price per item and the quantity. The product should be increased by 10,- € if the value of the\n",
+        "# order is smaller than 100,00 €."
+      ],
       "metadata": {
         "id": "FKVYUbhaE9HN"
+      },
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calculate_order_values(orders):\n",
+        "\n",
+        "    result = []\n",
+        "    for order in orders:\n",
+        "        order_number, book_title, quantity, price_per_item = order\n",
+        "        total_value = quantity * price_per_item\n",
+        "        if total_value < 100.00:\n",
+        "            total_value += 10.00\n",
+        "        result.append((order_number, total_value))\n",
+        "    return result\n",
+        "\n",
+        "\n",
+        "bookshop_orders = [\n",
+        "    [34245, \"Learning Python, Mark Lutz\", 2, 40.95],\n",
+        "    [98762, \"Programming Python, Mark Lutz\", 4, 56.80],\n",
+        "    [77226, \"Head First Python, Paul Barry\", 3, 32.95],\n",
+        "    [88112, \"Einführung in Python3, Bernd Klein\", 3, 24.99]\n",
+        "]\n",
+        "\n",
+        "order_values = calculate_order_values(bookshop_orders)\n",
+        "for order_number, total_value in order_values:\n",
+        "    print(f\"Order {order_number}: Total value = {total_value:.2f} €\")\n"
+      ],
+      "metadata": {
+        "id": "ugQfL3KnMgp8",
+        "outputId": "ae0001f2-af60-4d8f-876e-038311787f64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Order 34245: Total value = 91.90 €\n",
+            "Order 98762: Total value = 227.20 €\n",
+            "Order 77226: Total value = 108.85 €\n",
+            "Order 88112: Total value = 84.97 €\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xG4Ru1SBMkac"
       },
       "execution_count": null,
       "outputs": []
